<resources>
    <string name="app_name">My Schedule</string>
    <string name="your_location">Your location,</string>
    <string name="default_value">0</string>
    <string name="celcius_degree">°C</string>
    <string name="temp_value">%s°C</string>
    <string name="updated_at">Updated at %s</string>
    <string name="sky_status">Clear Sky</string>
    <string name="min_temp">Min. Temp: %s°C</string>
    <string name="max_temp">Max. Temp: %s°C</string>
    <string name="show_more">Show 6 more cities</string>
    <string name="sunrise">Sunrise</string>
    <string name="time_default">00.00am</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="refresh">Refresh</string>
    <string name="and_update"><![CDATA[& Update]]></string>
    <string name="back">Back To My City</string>
    <string name="back_to_list">Back To List</string>
    <string name="all_schedule">look up all schedule</string>
    <string name="date">0 Januari 2024</string>
    <string name="day">day</string>
    <string name="schedule">schedule</string>
    <string name="your_activity_today">Your Activity Today</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="day_default">Monday</string>
    <string name="schedule_name">Schedule name</string>
    <string name="add_schedule">Add Schedule</string>


    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="list">List</string>
    <string name="schedule_app">Schedule App</string>
    <string name="input_empty_message">Schedule name and time cannot be empty</string>
    <string name="your_activity">Your Activity</string>
    <string name="time">Time</string>
    <string name="delete_schedule">Delete Schedule</string>
    <string name="delete_alert">Delete this schedule?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_success_message">Schedule deleted successfully!</string>
    <string name="detail_schedule">Detail Schedule</string>
    <string name="add_schedule_confirmation">Add new schedule?</string>
    <string name="your_nearest_schedule">Nearest Schedule</string>

</resources>