<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.powerhouse.ai.weathertraining.ui.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add_schedule"
        android:name="com.powerhouse.ai.weathertraining.ui.AddScheduleFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add_schedule" />

    <fragment
        android:id="@+id/navigation_list_day_schedule"
        android:name="com.powerhouse.ai.weathertraining.ui.schedule.ListScheduledDaysFragment"
        android:label="@string/list"
        tools:layout="@layout/fragment_list_scheduled_days" />

</navigation>