<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailScheduleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".ui.detail.DetailActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="10dp"
            android:text="@string/schedule_name"
            android:textSize="16sp"
            android:drawableLeft="@drawable/ic_book" />

        <TextView
            android:id="@+id/tv_schedule_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:text="@string/time"
            android:textSize="16sp"
            android:drawableLeft="@drawable/ic_time"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            tools:text="@tools:sample/date/day_of_week" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:text="@string/note"
            android:textSize="16sp"
            android:drawableLeft="@drawable/ic_note" />

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            tools:text="@tools:sample/lorem/random" />

    </LinearLayout>

</ScrollView>