<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddScheduleActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_schedule"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_layout_course"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:hint="@string/schedule_name"
        app:boxCornerRadiusBottomEnd="@dimen/et_radius"
        app:boxCornerRadiusBottomStart="@dimen/et_radius"
        app:boxCornerRadiusTopEnd="@dimen/et_radius"
        app:boxCornerRadiusTopStart="@dimen/et_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="255"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--harusnya spinner dikasih nama hari ae buat default-->
    <!--stylenya juga dikasih elevation-->
    <Spinner
        android:id="@+id/spinner_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:entries="@array/day"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_layout_course" />

    <ImageButton
        android:id="@+id/ib_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:elevation="8dp"
        android:onClick="showTimePicker"
        android:src="@drawable/ic_time"
        android:tag="startTimePicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_day" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        app:layout_constraintBottom_toBottomOf="@+id/ib_start_time"
        app:layout_constraintStart_toEndOf="@+id/ib_start_time"
        app:layout_constraintTop_toTopOf="@+id/ib_start_time" />

    <ImageButton
        android:id="@+id/ib_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:elevation="8dp"
        android:onClick="showTimePicker"
        android:src="@drawable/ic_time"
        android:tag="endTimePicker"
        app:layout_constraintStart_toEndOf="@id/textView"
        app:layout_constraintTop_toTopOf="@+id/ib_start_time" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        app:layout_constraintBottom_toBottomOf="@+id/ib_end_time"
        app:layout_constraintStart_toEndOf="@+id/ib_end_time"
        app:layout_constraintTop_toTopOf="@+id/ib_end_time" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:hint="@string/note"
        app:boxCornerRadiusBottomEnd="@dimen/et_radius"
        app:boxCornerRadiusBottomStart="@dimen/et_radius"
        app:boxCornerRadiusTopEnd="@dimen/et_radius"
        app:boxCornerRadiusTopStart="@dimen/et_radius"
        app:layout_constraintTop_toBottomOf="@+id/ib_end_time"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:lines="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:shadowColor="@color/black"
        android:text="@string/save"
        android:textColor="@color/design_default_color_primary"
        android:textColorHighlight="@color/common_google_signin_btn_text_light_pressed"
        app:cornerRadius="10dp"
        app:elevation="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:strokeColor="@color/design_default_color_primary"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>