<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.schedule.AddScheduleFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_schedule"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_schedule"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:hint="@string/schedule_name"
        app:boxCornerRadiusBottomEnd="@dimen/et_radius"
        app:boxCornerRadiusBottomStart="@dimen/et_radius"
        app:boxCornerRadiusTopEnd="@dimen/et_radius"
        app:boxCornerRadiusTopStart="@dimen/et_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_schedule_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="255"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_spinner_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_layout_schedule"
        app:strokeColor="@color/cardview_shadow_start_color">

        <Spinner
            android:id="@+id/spinner_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/day"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="16dp"
        android:tag="startTimePicker"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_spinner_container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp">

            <ImageView
                android:id="@+id/iv_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:src="@drawable/ic_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/start_time"
                app:layout_constraintBottom_toBottomOf="@+id/iv_start_time"
                app:layout_constraintStart_toEndOf="@+id/iv_start_time"
                app:layout_constraintTop_toTopOf="@+id/iv_start_time" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:tag="endTimePicker"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_start_time"
        app:layout_constraintStart_toEndOf="@+id/btn_start_time"
        app:layout_constraintTop_toTopOf="@+id/btn_start_time">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp">

            <ImageView
                android:id="@+id/iv_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:elevation="8dp"
                android:src="@drawable/ic_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/end_time"
                app:layout_constraintBottom_toBottomOf="@+id/iv_end_time"
                app:layout_constraintStart_toEndOf="@+id/iv_end_time"
                app:layout_constraintTop_toTopOf="@+id/iv_end_time" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="8dp"
        android:hint="@string/note"
        app:boxCornerRadiusBottomEnd="@dimen/et_radius"
        app:boxCornerRadiusBottomStart="@dimen/et_radius"
        app:boxCornerRadiusTopEnd="@dimen/et_radius"
        app:boxCornerRadiusTopStart="@dimen/et_radius"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_time"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:lines="4" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/save"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <!--    <com.google.android.material.button.MaterialButton-->
    <!--        style="@style/Widget.Material3.Button.OutlinedButton"-->
    <!--        android:id="@+id/btn_save"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="@dimen/fab_margin"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:shadowColor="@color/black"-->
    <!--        android:text="@string/save"-->
    <!--        android:textColor="@color/design_default_color_primary"-->
    <!--        android:textColorHighlight="@color/common_google_signin_btn_text_light_pressed"-->
    <!--        android:textSize="16sp"-->
    <!--        app:cornerRadius="10dp"-->
    <!--        app:elevation="@dimen/fab_margin"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"-->
    <!--        app:strokeColor="@color/design_default_color_primary"-->
    <!--        app:strokeWidth="2dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>